--- a/public/styles/responsiveDesign.css
+++ b/public/styles/responsiveDesign.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1400px) {
+/* @media only screen and (min-width: 1400px) {
   
   .composeNew {
     font-family: 'Bungee';
@@ -11,69 +11,37 @@
   header {
     width: auto;
   }
-}
+} */
 
 @media only screen and (min-width: 1024px) {
   
-  article.tweetContainer {
-    top: -8rem;
-    margin-bottom: 100px;
-    margin-left: 15em;
-    margin-right: 2mm;
-    width: 100%;
-    float: right;
-  }
-  
-  header {
-    position: static;
-    width: 30%;
-    margin-top: -0.5em;
-    background-color: transparent;
-  }
-  #picName {
-    margin-top: 5em;
-    position: fixed
-  }
-  .composeNew {
-    margin-top: -10em;
-    margin-left: 15em;
-    position: absolute;
-  }
-}
-
-@media only screen and (max-width: 1024px) {
-
-  #picName {
-    margin-top: 0;
-  } 
-  
-  header {
-    position: absolute;
-    width: 100%;
-    top: 0em;
-  }
-  
-  article.tweetContainer {
-    margin-left: 2mm;
-    margin-right: 2mm;
-    margin-bottom: 1em;
-  }
-  
   .navbar {
-    background-color: transparent;
+    background-color: rgb(55, 122, 161);
   }
-
-  #bounceArrow {
-    margin-top: 2.2em;
+  
+  header {
+    margin-top: 100px;
+    width: 45%;
+    float: left;
+    background: transparent;
   }
-  .writeANewTweet {
-    margin-top: 1.5em;
-  }
+  
   .composeNew {
-    margin-left: 1cm;
-    margin-right: 1cm;
+    margin-top: 150px;
+    float: right;
+    width: 55%;
+  }
+    
+  #zombie {
+    width: 270px;
+    margin-top: 80px;
+    position: relative;
+  }
+  article.tweetContainer p {
+    font-size: 6mm;
   }
 }
+
 
 
 
