--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,12 @@
+.hideOnClick {
+  display: none;
+}
+
 .composeNew {
   font-family: 'Bungee';
   font-size: 8mm;
   border-bottom: bold;
-  margin-bottom: 2em;
-  position: absolute;
-  margin: auto;
-  top: 50%;
+  margin-top: 60px;
   right: 0;
   bottom: 0;
   left: 0;
@@ -14,14 +15,13 @@
 #counter {
   float: right;
   color: orange;
-  margin-right: 1em;
   font-size: 6.5mm;
 }
 
 #text-field  {
   float: left;    
   color: rgb(0, 0, 0);
-  border: 0;
+  border: none;
   outline: 0;
   background: transparent;
   border-bottom: 5px solid rgba(0, 0, 0, 0.808);
@@ -48,10 +48,6 @@
   border-width: 3px;
   color: rgb(255, 255, 255);
   font-size: 5.5mm;   
-}
-
-#newTweet {
-  margin-left: 0.5cm;
 }
 
 
