--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,38 +1,45 @@
 .navbar {
-  position: fixed;
-  background-color: rgb(55, 122, 161);
-  height: 120px;
-  right: 100px;
-  left: 0;
   top: 0;
+  left: 0;
+  right: 100px;
   width: 100%;
+  height: 120px;
+  z-index: 9999;
+  position: fixed;
   color: #FFFFFF;
+  background-color: transparent;
 }
 
-.navbar .TWEETER {
-  position: relative;
+#nav-left {
+  float: left;
+  padding-top: 3px;
+  font-size: 8mm;
   color: #fffdff;
-  left: 1%;
-  top: 1%;
-  font-size: 10mm;
 }
 
-#bounceArrow {
-  margin-bottom: auto;
-  margin-top: 3em;
-  margin-right: -5em;
+#nav-right {
+  float: right;
+  text-align: center;
+}
+
+#bouncingArrow {
   float: right;
   width: 50px;
   height: 50px;
+  margin-left: 90%;
+  margin-top: 0.1cm;
   animation: bounce 2s infinite;
 }
 
+.navbar span {
+  margin: 5px;
+}
+
+
 .writeANewTweet {
-  margin-top: 2.5em;
-  margin-right: 1.5em;
-  font-family: 'Questrial';
-  font-size: 5mm;
   float: right;
+  font-size: 5mm;
+  font-family: 'Questrial';
 }
 
 
