--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,15 +1,19 @@
 @media only screen and (min-width: 1024px) {
   
+  .constainer {
+    display:flex;
+  }
+  
   .navbar {
     background-color: rgb(55, 122, 161);
   }
   
-  header {
+  .main-header {
     margin-top: 100px;
     width: 45%;
     float: left;
     background: transparent;
-  }
+  } 
   
   .new-tweet {
     margin-top: 150px;
@@ -21,9 +25,6 @@
     width: 270px;
     margin-top: 80px;
     position: relative;
-  }
-  article.tweetContainer p {
-    font-size: 6mm;
   }
 }
 
